syntax = "proto3";

option csharp_namespace = "TradeBotCommon";
import "google/protobuf/timestamp.proto";

package TradeBot.Common;

enum ReplyCode{
	reply_code_succeed = 0;
	reply_code_failure = 1;
}

message DefaultReply{
	ReplyCode code = 1;
	string message = 2;
}

enum OrderStatus{
	order_status_open = 0;
	order_status_closed = 1;
}

enum OrderType{
	order_type_sell = 0;
	order_type_buy = 1;
}

message Order {
	double quantity = 1;
	double price = 2;
	OrderStatus status = 3;
	OrderType type = 4;
}

message AlgorithmInfo{
    //интервал анализа
	google.protobuf.Timestamp interval = 1;
	//количество точек в интервале (между точками берется среднее)
	int point_split_count = 2;
}

message Config{
	//общий баланс на счету 
	double total_balance = 1;
	//доступный процент из общего баланса
	double avaible_balance = 2;
	//сколько мы хотим прибыли получать с контракта
	double required_profit = 3;
	//налоги на слот
	double slot_fee = 4;
	//точный объем контракта
	double contract_value = 5;
	//когда снимать свои ордера с биржы
	double order_update_price_range = 6;
	//информация необходимая для работы алгоритма
	AlgorithmInfo AlgorithmInfo = 7;
}

message Log {
	//когда произошла запись
	timestamp when = 1;
	// на каком микросервисе и в каком методе прозошла запись
	string where = 2;
	//сообщение лога
	string log_message = 3;
}